# TP4

./: .cproject
Consigna/: gateway.js
source/: App.c  App.h  CMakeLists.txt  board.h  main.c
source/Display/: display_driver.c  display_interface.c  leds.c
source/Magnetic_stripe/: magtek_driver.c  mt_evqueue.c
source/PIT/: pit.h
source/Rotary_encoder/: rotary_encoder.c
source/Timer/: timers.c
source/UART/: uart.c
source/Util/: f_list.c  msg_queue.c  queue.c
source/rtos/uCOSIII/src/uCOS-III/Source/: os_tmr.c
source/thingspeak/: thingspeak.c  thingspeak.h  thingspeak_debug.c  thingspeak_debug.h  thingspeak_debug_main.c
source/thingspeak/UART/: uart.c  uart.h
